--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,19 @@
+# Python cache
 __pycache__/
 *.pyc
-.ipynb_checkpoints/
-.streamlit/secrets.toml
+*.pyo
+*.pyd
+
+# Data / cache
+data/*.csv
+.cache/
+.streamlit/
+
+# Env
+.env
+.venv
+venv/
+
+# OS
+.DS_Store
+Thumbs.db
